--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -92,6 +92,10 @@ body a{
   border: 1px solid grey;
   border-radius: 5px;
 }
+
+#note-group{
+  margin-top: 25px;
+}
 /*---------------------*/
 /* 		FOOTER 		   */
 /*---------------------*/
